Added attributions and references to the code.

--- a/code/SudokuImageRecognition.ipynb
+++ b/code/SudokuImageRecognition.ipynb
@@ -44,6 +44,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Acknowledgements and References\n",
+    "While the majority of the code below is my own, I did use some pieces of code from other sources, as well as using general ideas on how to process sudoku grids. I do my best to list them in the comments where they are used, but here is a list as well:\n",
+    "\n",
+    "- The data used for this project was obtained from [Sudoku Dataset](https://github.com/wichtounet/sudoku_dataset) by Baptiste Wicht, licensed under [CC-BY-4.0](https://creativecommons.org/licenses/by/4.0/).\n",
+    "- Inspiration and some code on how to work with the contours: https://www.pyimagesearch.com/2020/08/10/opencv-sudoku-solver-and-ocr/\n",
+    "- Sorting contours, as well as using a mask, and filtering out small contours was found here: https://stackoverflow.com/a/59184973 and https://stackoverflow.com/a/58018944\n",
+    "- Using vertical and horisontal structuring elements with closing to fix lines, was initially found here (I initially used just dilation, until I realised that you can use closing from these sources): https://stackoverflow.com/a/43863448 and https://stackoverflow.com/a/59184973\n",
+    "- The scikit-image [documentation](https://scikit-image.org/docs/dev/), specifically how to perform the [Hough transform](https://scikit-image.org/docs/dev/auto_examples/edges/plot_line_hough_transform.html).\n",
+    "- OpenCV documentation, using findContours as well as drawContours: [Example](https://docs.opencv.org/4.5.2/d4/d73/tutorial_py_contours_begin.html), [drawContours](https://docs.opencv.org/4.5.2/d6/d6e/group__imgproc__draw.html#ga746c0625f1781f1ffc9056259103edbc), [findContours](https://docs.opencv.org/3.4/d3/dc0/group__imgproc__shape.html#ga95f5b48d01abc7c2e0732db24689837b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Utility\n",
     "Here we have functions that load the data and images from disk, as well as some plotting functions."
    ]
@@ -206,7 +221,7 @@
     "    Returns:\n",
     "        np.ndarray:\n",
     "    \"\"\"\n",
-    "    filtered = (filters.sobel(img))#.astype(np.uint8)\n",
+    "    filtered = (filters.sobel(img))\n",
     "    filtered = (filtered - filtered.min()) / (filtered.max() - filtered.min())\n",
     "    return filtered"
    ]
@@ -225,7 +240,8 @@
    "outputs": [],
    "source": [
     "def contour_better(img: np.ndarray) -> np.ndarray:\n",
-    "    \"\"\"Finds the contours of a sudoku grid\n",
+    "    \"\"\"Finds the contours of a sudoku grid and returns an image with the small ones (i.e. digits and noise) removed.\n",
+    "        # Also repairs vertical and horisontal lines somewhat.\n",
     "\n",
     "    Args:\n",
     "        img (np.ndarray): Image to get contours for\n",
@@ -234,7 +250,8 @@
     "        np.ndarray: Draws the contours on the image\n",
     "\n",
     "\n",
-    "    Inspiration and some code was taken from: https://www.pyimagesearch.com/2020/08/10/opencv-sudoku-solver-and-ocr/\n",
+    "    Inspiration and some code was taken from: https://www.pyimagesearch.com/2020/08/10/opencv-sudoku-solver-and-ocr,\n",
+    "    and the idea to filter out small contours by filling them in from here: https://stackoverflow.com/a/59184973.\n",
     "    \"\"\"\n",
     "    img = img.copy()\n",
     "    # Find the contours\n",
@@ -245,12 +262,17 @@
     "    # For all contours, if it is small, then fill it in completely with 0 (i.e. black).\n",
     "    # This causes smaller contours that represent the digits, or noise to be removed, leaving only the \n",
     "    # (relatively) larger gridlines themselves.\n",
+    "    # This idea of filtering based on the area, and filling in small areas was taken from here:\n",
+    "    # https://stackoverflow.com/a/59184973\n",
     "    for area, c in zip(areas, cnts):\n",
     "        if area < 1800:\n",
     "            # Fill with black if contour is small, and probably not a grid cell.\n",
     "            cv2.drawContours(img, [c], -1, 0, -1)\n",
     "    \n",
-    "    # Use closing by a vertical and horisontal kernel to repair some edges.\n",
+    "    # Use closing by a vertical and horisontal kernel to repair some edges instead of simply using dilation. \n",
+    "    # Again, idea and implementation originally from here: \n",
+    "    # https://stackoverflow.com/a/59184973, but also here: https://stackoverflow.com/a/43863448\n",
+    "\n",
     "    vertical_kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (1,5))\n",
     "    img = cv2.morphologyEx(img, cv2.MORPH_CLOSE, vertical_kernel, iterations=2)\n",
     "    horis_kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (5,1))\n",
@@ -272,6 +294,9 @@
     "\n",
     "    Returns:\n",
     "        Tuple[np.ndarray, np.ndarray, np.ndarray]: Line image, coordinates of lines, angles of lines.\n",
+    "        \n",
+    "        \n",
+    "    The code to do the Hough transform was adapted from the scikit-image docs: https://scikit-image.org/docs/dev/auto_examples/edges/plot_line_hough_transform.html\n",
     "    \"\"\"\n",
     "    image = cropped_image\n",
     "    # Threshold. \n",
@@ -337,6 +362,18 @@
     "    Returns:\n",
     "        List[Tuple[np.ndarray, np.ndarray]]: List of [contour, mask] where the contour is the cv2.contour and the mask is an \n",
     "            image that has 1s exactly where the applicable digit cell is.\n",
+    "            \n",
+    "    \n",
+    "    The idea to fix broken lines using closing instead of just dilation, was adapted from here: https://stackoverflow.com/a/43863448\n",
+    "    to instead use both a vertical and horisontal kernel, and to do closing in one step.\n",
+    "    \n",
+    "    To actually associate contours with locations in grid cells, we sort the contours first from top to bottom, \n",
+    "    then we sort each row from left to right.\n",
+    "    The idea behind this was originally found here: https://stackoverflow.com/a/59184973, \n",
+    "    which was adapted from https://stackoverflow.com/a/58018944.\n",
+    "    \n",
+    "    The idea (and implementation) of how to use the contours to create a mask that can be used to crop out each individual cell\n",
+    "    was also found here: https://stackoverflow.com/a/59184973 and https://www.pyimagesearch.com/2020/08/10/opencv-sudoku-solver-and-ocr/\n",
     "    \"\"\"\n",
     "    # Copy to not make changes to the original image.\n",
     "    hough_line_image = hough_line_image.copy()\n",
@@ -365,7 +402,7 @@
     "        cnts = cnts[1:]\n",
     "    good_conts = []\n",
     "    len_old = len(cnts)\n",
-    "    # Only take contour that are roughly square.\n",
+    "    # Only take contours that are roughly square.\n",
     "    for c in cnts:\n",
     "        x, y, w, h = cv2.boundingRect(c)\n",
     "        area_proper = cv2.contourArea(c)\n",
@@ -380,16 +417,17 @@
     "    all_image_masks_and_contours = []\n",
     "    len_new = len(cnts)\n",
     "\n",
-    "    if do_return_contours:\n",
+    "    if do_return_contours:# If we should return the lengths of the contours. The method will fail if len_new != 81.\n",
     "        return len_old, len_new\n",
     "    cnts, _ = contours.sort_contours(cnts, method='top-to-bottom')\n",
     "    index = 0\n",
     "    # Now for all 81 contours, sort it from top to bottom first, then left to right for each row\n",
     "    # to get an idea for the location of each cell.\n",
-    "    for i in range(9):\n",
+    "    for i in range(9): # 9 rows (ideally)\n",
     "        row = []\n",
-    "        for j in range(9):\n",
-    "            row.append(cnts[i * 9 + j])\n",
+    "        for j in range(9): # 9 columns (ideally)\n",
+    "            row.append(cnts[i * 9 + j]) # linear indexing.\n",
+    "        # Sort this specific row from left to right.\n",
     "        row, _ = contours.sort_contours(row, method='left-to-right')\n",
     "        for c in row:\n",
     "            # mask is basically an image that is 0 everywhere except inside the contour.\n",
@@ -438,7 +476,8 @@
    "outputs": [],
    "source": [
     "def check_empty_non(digit_vals: List[np.ndarray], do_plot=False) -> Tuple[List[Tuple[int, int]], List[Tuple[int, int]]]:\n",
-    "    \"\"\"Returns the coordinates of non empty and empty grids.\n",
+    "    \"\"\"Returns the coordinates of non empty and empty grids by determining if there is at least 20% white pixels in the middle ninth of the image.\n",
+    "        This method was developed empirically.\n",
     "\n",
     "    Args:\n",
     "        digit_vals (List[np.ndarray]): 1D list of cropped cells\n",
